test/interp/spec/block.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/block.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/block.wast:153:46: type mismatch of block. got void, expected i32
  (module (func $type-empty-i32 (result i32) (block)))
                                             ^
assert_invalid error:
  third_party/testsuite/block.wast:157:46: type mismatch of block. got void, expected i64
  (module (func $type-empty-i64 (result i64) (block)))
                                             ^
assert_invalid error:
  third_party/testsuite/block.wast:161:46: type mismatch of block. got void, expected f32
  (module (func $type-empty-f32 (result f32) (block)))
                                             ^
assert_invalid error:
  third_party/testsuite/block.wast:165:46: type mismatch of block. got void, expected f64
  (module (func $type-empty-f64 (result f64) (block)))
                                             ^
assert_invalid error:
  third_party/testsuite/block.wast:171:12: type mismatch in nop. got void, expected i32
    (block (nop))
           ^
assert_invalid error:
  third_party/testsuite/block.wast:177:12: type mismatch of block. got f32, expected i32
    (block (f32.const 0))
           ^
assert_invalid error:
  third_party/testsuite/block.wast:183:33: type mismatch in nop. got void, expected i32
    (block (br 0 (i32.const 1)) (nop))
                                ^
assert_invalid error:
  third_party/testsuite/block.wast:189:33: type mismatch of block. got f32, expected i32
    (block (br 0 (i32.const 1)) (f32.const 0))
                                ^
assert_invalid error:
  third_party/testsuite/block.wast:196:12: type mismatch of br value. got void, expected i32
    (block (br 0))
           ^
assert_invalid error:
  third_party/testsuite/block.wast:202:12: type mismatch of br value. got void, expected i32
    (block (br 0) (i32.const 1))
           ^
assert_invalid error:
  third_party/testsuite/block.wast:208:18: type mismatch of br value. got i64, expected i32
    (block (br 0 (i64.const 1)) (i32.const 1))
                 ^
assert_invalid error:
  third_party/testsuite/block.wast:214:18: type mismatch of br value. got i64, expected i32
    (block (br 0 (i64.const 1)) (br 0 (i32.const 1)))
                 ^
assert_invalid error:
  third_party/testsuite/block.wast:220:39: type mismatch of br value. got f64, expected i32
    (block (br 0 (i32.const 1)) (br 0 (f64.const 1)))
                                      ^
assert_invalid error:
  third_party/testsuite/block.wast:227:19: type mismatch of br value. got void, expected i32
    (block (block (br 1)) (br 0 (i32.const 1)))
                  ^
assert_invalid error:
  third_party/testsuite/block.wast:233:25: type mismatch of br value. got i64, expected i32
    (block (block (br 1 (i64.const 1))) (br 0 (i32.const 1)))
                        ^
assert_invalid error:
  third_party/testsuite/block.wast:239:21: type mismatch of br value. got void, expected i32
    (i32.ctz (block (br 0)))
                    ^
assert_invalid error:
  third_party/testsuite/block.wast:245:5: type mismatch of function result. got i64, expected i32
    (i64.ctz (block (br 0 (i64.const 9))))
    ^
assert_invalid error:
  third_party/testsuite/block.wast:250:37: type mismatch of br value. got void, expected i32
  (module (func (result i32) (block (br 0))))
                                    ^
assert_invalid error:
  third_party/testsuite/block.wast:254:46: type mismatch of br value. got void, expected i32
  (module (func (result i32) (i32.ctz (block (br 0)))))
                                             ^
19/19 tests passed.
;;; STDOUT ;;)
